--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="mainDiv">
         <h1 id="points"> 0 </h1>
         <div>
-            <input type="button" id="buto"> click me!!!1<br>
+            <input type="button" id="buto" value="click me!!!1"><br>
             <br>
             <h4>points per click</h4>
             <h3 id="pointsPerClick">1</h3>
